// Copyright (C) 2021 Aung Maw
// Licensed under the GNU General Public License v3.0

syntax = "proto3";

package core.pb;

// option go_package = ".;core_pb";

message Block {
	bytes hash = 1;
	uint64 height = 2;
	bytes parentHash = 3;
	bytes proposer = 4;
	QuorumCert quorumCert = 5;
	uint64 execHeight = 6;
	bytes merkleRoot = 7;
	int64 timestamp = 8;
	repeated bytes transactions = 9; // transaction hashes
	bytes signature = 10; // signature of proposer
}

message BlockCommit {
	bytes hash = 1;
	double elapsedExec = 2;
	double elapsedMerkle = 3;
	double elapsedWrite = 4;
	repeated bytes oldBlockTxs = 5;
	repeated StateChange stateChanges = 6;
	bytes leafCount = 7;
	bytes merkleRoot = 8;
}

message Signature {
	bytes pubKey = 1;
	bytes value = 2;
}

message QuorumCert {
	bytes blockHash = 1;
	repeated Signature signatures = 2;
}

message Vote {
	bytes blockHash = 1;
	Signature signature = 2;
}

message Transaction {
	bytes hash = 1;
	bytes signature = 2;
	int64 nonce = 3;
	bytes sender = 4;
	bytes codeAddr = 5;
	bytes input = 6;
}

message TxCommit {
	bytes hash = 1;
	bytes blockHash = 2;
	uint64 blockHeight = 3;
	string error = 4;
	double elapsed = 5;
}

message TxList {
  	repeated Transaction list = 1;
}

message StateChange {
	bytes key = 1;
	bytes value = 2;
	bytes prevValue = 3;
	bytes treeIndex = 4;
	bytes prevTreeIndex = 5;
}
